:memo: | Minor correction on readme
